--- a/index.html
+++ b/index.html
@@ -1,48 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css"
-      rel="stylesheet"
-    />
-    <script async src="script.js"></script>
-    <title>Todo list</title>
-  </head>
-  <body class="container-sm">
-    <header><h1 class="display-3">Minha Lista de Tarefas</h1></header>
-    <main>
-      <p id="funcionamento">
-        Clique duas vezes em um item para marcá-lo como completo
-      </p>
-      <div class="input-group mb-3">
-        <input type="text" id="texto-tarefa" class="form-control" />
-        <button id="criar-tarefa" class="btn btn-primary">Criar</button>
-      </div>
-      <div class="input-group mb-3">
-        <button id="apaga-tudo" class="btn btn-danger">Remover Todos</button>
-        <button id="remover-finalizados" class="btn btn-danger">
-          Remover Finalizados
-        </button>
-        <button id="remover-selecionado" class="btn btn-danger">
-          Remover Selecionado
-        </button>
-      </div>
-      <div class="input-group mb-3">
-        <button id="salvar-tarefas" class="btn btn-primary">Salvar</button>
-      </div>
-      <div class="input-group mb-3">
-        <button id="mover-cima" class="btn btn-secondary">
-          Mover para cima
-        </button>
-        <button id="mover-baixo" class="btn btn-secondary">
-          Mover para baixo
-        </button>
-      </div>
-      <ol id="lista-tarefas"></ol>
-    </main>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css"
+            rel="stylesheet"
+        />
+        <script async src="script.js"></script>
+        <title>Todo list</title>
+    </head>
+    <body class="container-sm">
+        <header><h1 class="display-3">My To-Do List</h1></header>
+        <main>
+            <p id="funcionamento">
+                Double-click an item to mark it as complete
+            </p>
+            <div class="input-group mb-3">
+                <input type="text" id="texto-tarefa" class="form-control" />
+                <button id="criar-tarefa" class="btn btn-primary">
+                    Create
+                </button>
+            </div>
+            <div class="input-group mb-3">
+                <button id="apaga-tudo" class="btn btn-danger">
+                    Remove All
+                </button>
+                <button id="remover-finalizados" class="btn btn-danger">
+                    Remove Finished
+                </button>
+                <button id="remover-selecionado" class="btn btn-danger">
+                    Remove Selected
+                </button>
+            </div>
+            <div class="input-group mb-3">
+                <button id="salvar-tarefas" class="btn btn-primary">
+                    Save
+                </button>
+            </div>
+            <div class="input-group mb-3">
+                <button id="mover-cima" class="btn btn-secondary">
+                    Move Selected Up
+                </button>
+                <button id="mover-baixo" class="btn btn-secondary">
+                    Move Selected Down
+                </button>
+            </div>
+            <ol id="lista-tarefas"></ol>
+        </main>
+    </body>
 </html>
